<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>

    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="put_your_name">Put your name</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="order">Order</string>
    <string name="order_for">Order for <xliff:g id="order_for">%s</xliff:g></string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity">%d</xliff:g></string>
    <string name="order_summary_whipped_cream">Has whipped cream: <xliff:g id="whipped_cream">%s</xliff:g></string>
    <string name="order_summary_chocolate">Has chocolate: <xliff:g id="chocolate">%s</xliff:g></string>
    <string name="order_summary_total">Total: $<xliff:g id="total">%d</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">N o</string>

</resources>